# Jarvis

./: .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  JARVIS_COMPLETE_GUIDE.md  JARVIS_DEPLOYMENT_COMPLETE.md  JARVIS_TEST_RESULTS.md  MEETING_BRIEF_IMPLEMENTATION.md  Makefile  README.md  README_JARVIS.md  WHY_CONFIDENCE_COMPLETION.md  WHY_CONFIDENCE_README.md  api_bridge.py  cli.py  indexer.py  intelligence.py  mcp_unified.py  pyproject.toml  railway.toml  requirements.txt  score_utils.py  search-results  server.py  start-memory.sh  test_api.sh  time_filters.py  unified_memory.py  webapp.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  SUPER-FEEDBACK-BRIEF.md  TIMELINE-CLUSTERING-USAGE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agent/: README.md  RELIABILITY_IMPROVEMENTS.md  health-check.sh  pyproject.toml
agent/src/jarvis/: __init__.py  cli.py  logging.py  tray.py
agent/src/jarvis/capture/: __init__.py  change.py  screenshot.py
agent/src/jarvis/cli_commands/: __init__.py  capture.py  config.py  status.py
agent/src/jarvis/config/: __init__.py  exclusions.yaml  settings.py
agent/src/jarvis/engine/: __init__.py  capture_loop.py  orchestrator.py
agent/src/jarvis/icons/: __init__.py
agent/src/jarvis/meeting/: __init__.py  detector.py  recorder.py
agent/src/jarvis/monitor/: __init__.py  idle.py  window.py
agent/src/jarvis/sync/: __init__.py  queue.py  uploader.py
agent/tests/: test_integration.py
docs/: DEPLOYMENT.md  PHASE2-VERIFICATION.md
jarvis-dashboard/: AUDIT_7-241_FINDINGS.md  Dockerfile  TASK_7-241_COMPLETION_REPORT.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
jarvis-dashboard/public/: status.html
jarvis-dashboard/src/: App.tsx  index.css  main.tsx
jarvis-dashboard/src/api/: actions.ts  briefing.ts  (+4 more)
mcp/: README.md  pyproject.toml
mcp/scripts/: setup-claude-code.sh
mcp/src/jarvis_mcp/: __init__.py  audit.py  client.py  server.py  validators.py
mcp/src/jarvis_mcp/tools/: __init__.py  calendar.py  catchup.py  email.py  meetings.py  search.py  workflow.py
mcp/tests/: __init__.py  test_tools.py  test_validators.py
nginx/: .htpasswd  default.conf
server/: .env.example  Dockerfile  PROACTIVE_NOTIFICATIONS.md  README.md  TEST_MEETING_BRIEF.md  VISION_OCR_UPGRADE.md  alembic.ini  docker-compose.yml  gpu_indexer.py  pyproject.toml  test_timeline_clustering.py  test_vision_ocr.py  verify_meeting_brief_endpoint.py
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  002_add_processing_status.py  003_add_conversations_table.py  004_add_calendar_tables.py  005_add_email_tables.py  006_add_email_category.py  007_add_email_archived_flag.py  008_add_projects_table.py  009_add_daily_priorities_table.py
server/claude/: memories.json  projects.json  users.json
server/migrations/: add_detected_patterns.sql  add_entity_classifications.sql  add_promises.sql  add_quick_captures.sql
server/nginx/: default.conf
server/scripts/: gmail_oauth_helper.py  oauth_helper.py  reprocess_ocr.py
server/src/jarvis_server/: __init__.py  config.py  logging.py  main.py
server/src/jarvis_server/analytics/: __init__.py  app_usage.py
server/src/jarvis_server/api/: __init__.py  actions.py  activity.py  app_insights.py  bridge.py  briefing.py  briefing.py.backup  calendar.py  captures.py  captures_health.py  catchup.py  context_handoff.py  conversations.py  daily3.py  email.py  eureka.py  health.py  inbox.py  insights.py  linear.py  meeting_brief.py  meetings.py  memory_timeline.py  patterns.py  people_graph.py  project_pulse.py  promises.py  quick_capture.py  resume.py  search.py  timeline.py  today.py  why.py  workflow.py
server/src/jarvis_server/api/examples/: why_usage.py
server/src/jarvis_server/api/helpers/: __init__.py  why_builder.py
server/src/jarvis_server/api/models/: __init__.py  why_payload.py
server/src/jarvis_server/calendar/: __init__.py  models.py  oauth.py  sync.py
server/src/jarvis_server/catchup/: __init__.py  summarizer.py
server/src/jarvis_server/classification/: entity_classifier.py
server/src/jarvis_server/db/: __init__.py  models.py  session.py
server/src/jarvis_server/email/: __init__.py  classifier.py  embeddings.py  models.py  oauth.py  search.py  sync.py
server/src/jarvis_server/imports/: __init__.py  api.py  base.py  chatgpt.py  claude.py  grok.py
server/src/jarvis_server/inbox/: classifier.py  undo_store.py
server/src/jarvis_server/meetings/: __init__.py  briefs.py  summaries.py  tasks.py
server/src/jarvis_server/memory/: README.md  __init__.py  chunker.py  indexer.py  tagger.py
server/src/jarvis_server/notifications/: __init__.py  insights.py  tasks.py  telegram.py
server/src/jarvis_server/patterns/: conversation_detector.py  llm_detector.py
server/src/jarvis_server/privacy/: __init__.py  detector.py
server/src/jarvis_server/processing/: __init__.py  embeddings.py  ocr.py  pipeline.py  tasks.py  worker.py
server/src/jarvis_server/search/: __init__.py  hybrid.py  schemas.py  synthesis.py
server/src/jarvis_server/services/: resume_engine.py
server/src/jarvis_server/storage/: __init__.py  filesystem.py
server/src/jarvis_server/transcription/: __init__.py  tasks.py  whisper.py
server/src/jarvis_server/vector/: __init__.py  qdrant.py
server/src/jarvis_server/web/: __init__.py  api.py  routes.py
server/src/jarvis_server/web/static/css/: custom.css
server/src/jarvis_server/web/templates/: base.html  calendar.html  catchup.html  index.html  search.html  settings.html  timeline.html  workflows.html
server/src/jarvis_server/web/templates/partials/: calendar-grid.html  capture-grid.html  capture-modal.html  events-list.html  integration-settings.html  meeting-brief.html  recent-captures.html  result-modal.html  search-results.html  stats.html  status-cards.html  upcoming-briefs.html  upcoming-meetings.html
server/src/jarvis_server/workflow/: __init__.py  actions.py  detector.py  executor.py  false_positive.py  queue.py  repository.py  safety.py  undo.py
(+171 files in other folders)
