[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-agent"
version = "0.1.0"
description = "Privacy-first desktop agent for Jarvis - captures screenshots and uploads to server"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sven Arnarsson" },
]
keywords = ["desktop-agent", "screen-capture", "privacy", "jarvis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]
dependencies = [
    "mss>=9.0.0",
    "pystray>=0.19.0",
    "typer[all]>=0.12.0",
    "imagehash>=4.3.0",
    "pywinctl>=0.3",
    "pynput>=1.7.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
jarvis = "jarvis.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
