[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-mcp"
version = "0.1.0"
description = "Jarvis AI Chief of Staff - MCP Server for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jarvis Team"}
]

dependencies = [
    "mcp[cli]>=1.26.0,<2",
    "httpx>=0.27",
    "structlog>=24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[project.scripts]
jarvis-mcp = "jarvis_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
